<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:visibility="visible"
    tools:context=".Register">


    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="49dp"
        android:fontFamily="@font/aclonica"
        android:lineSpacingExtra="8sp"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFEB3B"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@color/black"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="#FF5722"
        android:textSize="27sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/Registerbutton"
        android:layout_width="388dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:text="@string/already_signed_in_login_here"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFEB3B"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registerbutton"
        app:layout_constraintVertical_bias="0.100000024" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="341dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="343dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>